# Vitaly-Shcheglov-An_application_for_analyzing_banking_transactions

./: .env  .env.example  .gitignore  README.md  my_log_config.py  pyproject.toml
data/: operations.xlsx
src/: main.py  reports.py  services.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
