[tool.poetry]
name = "an-application-for-analyzing-banking-transactions"
version = "0.1.0"
description = ""
authors = ["Vitaly Shcheglov < cgfhnfr4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
